--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.30.0",
     "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "^2.10.1",
     "axios": "^1.13.2",
@@ -22,10 +23,12 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.0",
     "react-i18next": "^16.2.4",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
     "react-to-print": "^3.2.0",
     "recharts": "^3.4.1",
+    "remark-gfm": "^4.0.1",
     "yup": "^1.7.1"
   },
   "devDependencies": {
