--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@google/genai": "^1.30.0",
     "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "^2.10.1",
+    "antd": "^6.1.2",
     "axios": "^1.13.2",
     "classnames": "^2.5.1",
     "framer-motion": "^12.23.24",
     "i18next": "^25.6.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.553.0",
+    "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.0",
